# rust-auth-server

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
src/: auth.rs  main.rs  nasa.rs
static/: apod.css  style.css
templates/: apod.html  login.html  signup.html
