[package]
name = "nasa-login-app"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.14.0"
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["cookie"] }
num-traits = "0.2.19"
rand = "0.8.5"
reqwest = { version = "0.12.20", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.6.6", features = ["fs"] }
